# w0rkit

./: .gitignore  LICENSE  README.md  pyproject.toml
w0rkit/: cli.py
w0rkit/web/: simple_b64.py  simple_mode.py  web_core.py  web_modes.py
w0rkit/web/common/: utils.py
w0rkit/web/static/payloads/: evil.js  example.html
