[tool.poetry]
name = "w0rkit"
version = "0.1.0"
description = ""
authors = ["jarviscodes <jarvis@jayradz.com>"]
readme = "README.md"
packages = [{include = "w0rkit"}]

[tool.poetry.dependencies]
python = "^3.9"
flask = "^2.3.2"
click = "^8.1.3"
colorama = "^0.4.6"
jinja2 = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
w0rkit = "w0rkit.cli:main"